--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
       <h2>질문</h2>
       <p>변해형은 아이베의 대표 미남이다.</p>
       <img src="images/1.png" alt="변해형" width="300">
-      <button id="btnO">O</button><button id="btnX">X</button>
+      <button id="btnO">O</button>
+      <audio id="audioO" src="sounds/123.m4a"></audio>
+      <button id="btnX">X</button>
     </section>
   </main>
 
   <footer>
     <p><span id="year"></span> </p>
   </footer>
-
   <script src="script.js"></script>
 </body>
 </html>
