--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       <h2>질문</h2>
       <p>변해형은 아이베의 대표 미남이다.</p>
       <img src="images/1.png" alt="변해형" width="300">
-      <button id="btnO">O</button>
-      <audio id="audioO" src="sounds/123.m4a"></audio>
+      <button id="btnO">버튼 O</button>
+        <img id="showImg" style="display:none; width:300px" src="">
+        <audio id="audioO" src="123.m4a"></audio>
       <button id="btnX">X</button>
     </section>
   </main>
