--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <section>
       <h2>질문</h2>
       <p>변해형은 아이베의 대표 미남이다.</p>
-      <br>
-      <img src="images/1.png" alt="변해형" width="300">
+      <img src="images/1.png" alt="변해형" width="300"><br><br>
       <button id="btnO">O</button>
       <button id="btnX">X</button>
     </section>
